tests/fixtures/errors/map_set_while_view.z
# E0200: a live map view holds a shared lock -- a writer (set) cannot
# run while it lives (rehash would dangle the view's payload).
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    g1: m.get key: "a".string
    m.set key: "b".string value: "y".string
    match (
        g1
    ) case some then {
        print g1
    } case none then {}
}
